--- a/style.css
+++ b/style.css
@@ -165,3 +165,74 @@ button:hover{
         align-items: center;
     }
 }
+.state{
+    max-width:100vw ;
+    padding-block: 4rem;
+    background-color:#f2f3f4;
+}
+.state-heading{
+    width:49%;
+    height:100% ;
+    display: inline-block;
+    vertical-align:top;
+}
+.state-tagline{
+    width:60%;
+    height: 50%;
+    margin: 7% auto;
+}
+.state-tagline h2{
+    font-size: 35px;
+    line-height: 45px;
+}
+.state-tagline .span{
+ color: rgb(71, 167, 71);
+}
+.state-heading p{
+    margin-top:1rem;
+    font-size: 20px;
+}
+.state-numbers{
+    width:49%;
+    height: 100% ;
+    display: inline-block;
+    vertical-align: top;
+}
+.flex-ul{
+    list-style-type: none;
+    width: 70%;
+    margin: 7% auto;
+    display: flex;
+    justify-content: center;
+    /* column-gap: 5rem; */
+    row-gap: 3rem;
+    flex-wrap: wrap;
+}
+.flex-ul li{
+    display: flex;
+    column-gap: 1rem;
+}
+.flex-ul h3{
+    font-size: 35px;
+}
+.design-tagline{
+    max-width: 100vw;
+    padding-block: 5rem;
+     display: flex;
+    justify-content:center;
+    align-items: center;
+    padding-inline: 1rem;
+    flex-wrap: wrap;
+}
+.phone-women{
+    width: 40%;
+    height: 100%;
+    padding-left:10%;
+    padding-top: 3%;
+}
+.phone-women img{
+    max-width: 100%;
+}
+.design-content{
+    width: 40%;
+}
